# -*- mode: org -*-
# -*- coding: utf-8 -*-
#+TITLE: changelog
#+AUTHOR: Jongbin Oh
#+EMAIL: ohyecloudy@gmail.com

The format is based on [[https://keepachangelog.com/en/1.0.0/][Keep a Changelog]].

** [[https://github.com/ohyecloudy/slab/compare/v1.0.5...HEAD][Unrelease]]
*** Added
    - pipeline 출력을 간단하게 한다
** [[https://github.com/ohyecloudy/slab/compare/v1.0.4...v1.0.5][v1.0.5]]
*** Added
    - masters 설정을 비워 높으면 모든 유저가 master 권한을 가진다
** [[https://github.com/ohyecloudy/slab/compare/v1.0.3...v1.0.4][v1.0.4]]
*** Added
    - 다른 봇이 입력한 메시지에도 반응한다
** [[https://github.com/ohyecloudy/slab/compare/v1.0.2...v1.0.3][v1.0.3]]
*** Added
    - =--date= 옵션에 오늘을 기준으로 한 delta days 입력이 가능하다. =--date -1= 옵션은 어제와 같다.
      - commits-without-mr, self-merge 명령어에 적용
*** Fixed
    - 파이프라인이 연속으로 100번 이상 실패해도 상태를 제대로 가져올 수 있다
** [[https://github.com/ohyecloudy/slab/compare/v1.0.1...v1.0.2][v1.0.2]]
*** Added
    - docker로 서버를 실행할 때, timezone을 설정할 수 있다.
*** Fixed
    - 빌드에 필요한 rebar를 설치해 docker-server 명령이 실패하는 결함 제거
** [[https://github.com/ohyecloudy/slab/compare/v1.0.0...v1.0.1][v1.0.1]]
*** Added
    - 파이프라인 상태(fixed, success, failed, still failing) 알림 여부를 config로 설정할 수 있다
*** Fixed
    - 특정 날짜 self merge 조회가 되지 않는 결함을 제거
** [[https://github.com/ohyecloudy/slab/compare/aae4f83786...v1.0.0][v1.0.0]]
*** Added
    - poor link purling
    - issues 옵션으로 gitlab issue를 조회할 수 있다
    - issues 조회 시 20개가 넘어가면 결과물에서 pagination 안내
    - commits-without-mr 커맨드로 merge request 없이 master 브랜치에 머지한 커밋을 조회할 수 있다
    - 복잡한 명령을 대체하는 alias 지원
    - help 명령어 추가
    - branch-access 커맨드로 protected branches 접근 레벨을 변경할 수 있다
    - config에서 설정할 수 있는 master 권한 추가
    - branch-access 커맨드는 master 권한을 가진 유저만 실행할 수 있다
    - pipelines 커맨드로 pipeline 상태를 조회할 수 있다
    - config에서 파이프라인 상태 변경 통보를 설정할 수 있다
    - pipeline-watcher 커맨드로 파이프라인 상태 변경 감시를 켜고 끌 수 있다
    - self-merge 커맨드로 셀프 머지한 merge request를 조회할 수 있다